...
        android:gravity="bottom"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/whiteTrans">

        <ImageButton
            android:id="@+id/previousStepBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
...
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            tools:text="Step No" />

        <ImageButton
            android:id="@+id/nextStepBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
...
